objects/BLND_DFDT_Resource__c.object
<CustomObject>
    <fields>
        <fullName>BLND_Approval__c</fullName>
        <label>Approval</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BLND_Archive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Archive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BLND_Attachment_Link__c</fullName>
        <label>Attachment Link</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BLND_Billing_Cost_Per_Day__c</fullName>
        <label>Billing Cost Per Day</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BLND_Billing_Cost_Per_Use__c</fullName>
        <label>Billing Cost Per Use</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BLND_Billing_Hourly_Rate__c</fullName>
        <label>Billing Hourly Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BLND_Billing_Overtime_Rate__c</fullName>
        <label>Billing Overtime Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BLND_Cost_Per_Day__c</fullName>
        <label>Cost Per Day</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BLND_Cost_Per_Use__c</fullName>
        <label>Cost Per Use</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BLND_Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BLND_Expansion__c</fullName>
        <label>Expansion</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BLND_Extra_Field__c</fullName>
        <label>Extra Field</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BLND_Hourly_Rate__c</fullName>
        <label>Hourly Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BLND_Overtime_Rate__c</fullName>
        <label>Overtime Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BLND_Project_Link__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Link</label>
        <referenceTo>BLND_DFDT_Project__c</referenceTo>
        <relationshipName>R00N30000002PYjNEAW</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BLND_Purpose__c</fullName>
        <label>Purpose</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BLND_Skill_Certification__c</fullName>
        <label>Skill Certification</label>
        <picklist>
            <picklistValues>
                <fullName>Cisco Certified Internetwork Expert</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Certified Lotus Professional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Certified Lotus Specialist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Certified Novell Administrator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Certified Novell Engineer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Certified Solaris Administrator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Microsoft Certified Database Administrator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Microsoft Certified Professional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Microsoft Certified Solutions Developer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Microsoft Certified Systems Engineer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Novell Certified Internet Professional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oracle Certified Professional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Management Professional</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BLND_Skill_Level__c</fullName>
        <label>Skill Level</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Beginner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intermediate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advanced</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expert</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BLND_Skill_Set__c</fullName>
        <label>Skill Set</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auditor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Analyst</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consultant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Relations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Database Administrator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Developer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lead Developer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engineer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lead Engineer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Network Administrator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Senior Consultant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Senior Database Administrator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Senior Developer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Task Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical Architect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical Lead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web Master</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical Writer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>QA Engineer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BLND_Version__c</fullName>
        <label>Version</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>DreamTeam Resource</label>
    <nameField>
        <label>Resource Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DreamTeam Resources</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>